<resources>
    <string name="app_name">SmartRSS</string>
    <string name="settings_title">Settings</string>
    <string name="recentArticles_title">Recent articles</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_share">Share</string>

    <string name="preferences_account_title">Account</string>
    <string name="preferences_account_summary">Feedly account</string>

    <string name="preferences_reading_speed_title">Reading speed</string>
    <string name="preferences_reading_speed_summary">Words per minute</string>

    <string name="preference_edit_account">preference_account</string>
    <string name="preference_list_speed">preference_reading_speed</string>
    <string name="preferences_token_title">Feedly Token</string>
    <string name="preference_edit_token">preference_token</string>
    <string name="title_activity_reader">ReaderActivity</string>
    <string name="share_article">Artikel teilen</string>
</resources>
